# MyGame

./: .gitignore  AGENTS.md  CMakeLists.txt  main.cpp  readme-install.md  readme-steps.md  readme.md
include/: AEntity  AEvent  AFloatingText  AFpsCounter  AFreeCamera  ARenderOverlay  ARenderTimeTracker  ARenderWindow  AText  ATextOverlay  AViewport  AWindow  AWorld  EEventKey  EGraphicsBackend  Overlay
src/: AEntity.cpp  AFpsCounter.cpp  AFreeCamera.cpp  ARenderOverlay.cpp  ARenderTimeTracker.cpp  ARenderWindow.cpp  AViewport.cpp  AWindow.cpp  AWorld.cpp  IWindowImpl.h  Overlay.cpp  VulkanApp.cpp  VulkanApp.h  Win32Window.cpp  Win32Window.h  main.cpp
src/Graphics/: IRendererImpl.h
src/Graphics/DirectX11/: DirectX11Renderer.cpp  DirectX11Renderer.h
src/Graphics/DirectX12/: DirectX12Renderer.cpp  DirectX12Renderer.h
src/Graphics/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h
src/Graphics/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/Win32/: AWindowImplWin32.cpp  AWindowImplWin32.h
src_old_version/: VulkanApp.cpp  VulkanApp.h  Win32Window.cpp  main.cpp
